--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,11 @@
 apply plugin: 'com.android.application'
 
 android {
+    packagingOptions {
+        exclude 'META-INF/LICENSE'
+        exclude 'META-INF/LICENSE-FIREBASE.txt'
+        exclude 'META-INF/NOTICE'
+    }
     compileSdkVersion 23
     buildToolsVersion "24.0.3"
     defaultConfig {
@@ -30,6 +35,8 @@ dependencies {
 
 // CardView
     compile 'com.android.support:cardview-v7:23.3.+'
+    compile 'com.firebase:firebase-client-android:2.5.2+'
+    compile 'com.google.android.gms:play-services:9.0.0'
 
 // Glide
     compile 'com.github.bumptech.glide:glide:3.7.0'
@@ -42,3 +49,4 @@ dependencies {
 
 
 }
+apply plugin: 'com.google.gms.google-services'
