--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,7 +36,7 @@ dependencies {
 // CardView
     compile 'com.android.support:cardview-v7:23.3.+'
     compile 'com.firebase:firebase-client-android:2.5.2+'
-    compile 'com.google.android.gms:play-services:9.0.0'
+    //compile 'com.google.android.gms:play-services:9.0.0'
 
 // Glide
     compile 'com.github.bumptech.glide:glide:3.7.0'
