--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -55,6 +55,7 @@
             android:screenOrientation="portrait" />
         <activity
             android:name=".SearchActivity"
+            android:theme="@style/BookTheme"
             android:screenOrientation="portrait" />
         <activity android:name=".ChatActivity"></activity>
     </application>
